--- a/Server/Cargo.toml
+++ b/Server/Cargo.toml
@@ -6,3 +6,5 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+game_api = { path = "../game_api" }
+thiserror = "1.0.61"
